--- a/Dom-project_YT/1/style.css
+++ b/Dom-project_YT/1/style.css
@@ -22,7 +22,14 @@ body {
 	justify-content: center;
 	align-items: center;
 }
-
+input[type='text'],
+input[type='text']:disabled{
+  background-color: #fff;
+  color: #999;
+  border: #000;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+}
 button {
 	padding: 1rem 3rem;
 	margin: 1rem 0;
@@ -41,6 +48,49 @@ button:hover {
 	background-color: #fff;
 	color: #000;
 	border: 1px solid #000;
+}
+.toast-message {
+	position: fixed;
+	z-index: 999;
+	top: 2rem;
+	right: 2rem;
+	background-color: rgb(19, 201, 110);
+	color: #000;
+	border: 1px solid #fff;
+	border-radius: 0.25rem;
+	padding: 1rem 2rem;
+	cursor: pointer;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.toast-message-slide-in {
+	animation: toast-animation-in 0.5s ease-in;
+}
+
+.toast-message-slide-out {
+	animation: toast-animation-out 0.5s ease-in;
+}
+
+@keyframes toast-animation-in {
+	from {
+		transform: translateX(200px);
+		opacity: 0;
+	}
+	to {
+		transform: translateX(0px);
+		opacity: 1;
+	}
+}
+
+@keyframes toast-animation-out {
+	from {
+		transform: translateX(0px);
+		opacity: 1;
+	}
+	to {
+		transform: translateX(200px);
+		opacity: 0;
+	}
 }
 
 h1 {
