--- a/Dom-project_YT/1/style.css
+++ b/Dom-project_YT/1/style.css
@@ -23,13 +23,44 @@ body {
 	align-items: center;
 }
 input[type='text'],
-input[type='text']:disabled{
-  background-color: #fff;
-  color: #999;
-  border: #000;
-  padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
+input[type='text']:disabled,
+.copy-btn {
+	background-color: #fff;
+	color: #000;
+	border: #000;
+	padding: 0.5rem 1rem;
+	border-radius: 0.25rem;
+	box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+.input-group {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+	position: relative;
+	/* overflow: hidden; */
+}
+
+.input-icon {
+	position: absolute;
+	padding: 0.45rem;
+	background-color: #ddd;
+	color: #424242;
+	border-top-left-radius: 0.25rem;
+	border-bottom-left-radius: 0.25rem;
+}
+
+.output {
+	margin-left: 1rem;
+}
+
+.output:focus {
+	outline: none;
+	border: none;
+}
+
+
+
 button {
 	padding: 1rem 3rem;
 	margin: 1rem 0;
